[gd_scene load_steps=7 format=3 uid="uid://cc25in05338v8"]

[ext_resource type="Script" path="res://maps/objects/pods/scripts/weapon_pod.gd" id="1_twncm"]
[ext_resource type="PackedScene" uid="uid://bnnxham1qo2uu" path="res://maps/objects/pods/store_element.tscn" id="2_socjt"]
[ext_resource type="FontFile" uid="uid://dkg32o3qfh2n7" path="res://assets/Fonts/pixelmix.ttf" id="3_xknsf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oahqn"]
bg_color = Color(0.278431, 0.278431, 0.427451, 1)
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8fxxh"]
bg_color = Color(0.203922, 0.203922, 0.317647, 0.501961)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ffyms"]
bg_color = Color(1, 1, 1, 0.021)

[node name="Control" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -302.5
offset_top = -186.0
offset_right = 302.5
offset_bottom = 186.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_twncm")
weapon_buy_button = ExtResource("2_socjt")
metadata/_edit_use_anchors_ = true

[node name="HeaderPanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 46.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_oahqn")

[node name="MarginContainer" type="MarginContainer" parent="HeaderPanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="HBoxContainer" type="HBoxContainer" parent="HeaderPanelContainer/MarginContainer"]
layout_mode = 2

[node name="Header_Text" type="Label" parent="HeaderPanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_fonts/font = ExtResource("3_xknsf")
text = "Weapon Pod Station
"

[node name="Control" type="Control" parent="HeaderPanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="Players_money" type="Label" parent="HeaderPanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.122942, 0.728857, 0.308717, 1)
theme_override_fonts/font = ExtResource("3_xknsf")
text = "--- $"
horizontal_alignment = 2

[node name="ContentPanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 46.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8fxxh")

[node name="MarginContainer" type="MarginContainer" parent="ContentPanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="ContentPanelContainer/MarginContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="ContentPanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_ffyms")

[node name="RefillAmmonition" parent="ContentPanelContainer/MarginContainer/VBoxContainer/Panel" instance=ExtResource("2_socjt")]
layout_mode = 2
offset_left = 0.0
offset_top = 4.0
offset_right = 573.0
offset_bottom = 36.0

[node name="Label" parent="ContentPanelContainer/MarginContainer/VBoxContainer/Panel/RefillAmmonition/MarginContainer/HBoxContainer" index="0"]
text = "Refill ammunition"

[node name="Unlock" parent="ContentPanelContainer/MarginContainer/VBoxContainer/Panel/RefillAmmonition/MarginContainer/HBoxContainer" index="1"]
text = ""

[node name="Cost" parent="ContentPanelContainer/MarginContainer/VBoxContainer/Panel/RefillAmmonition/MarginContainer/HBoxContainer" index="3"]
text = "50 $"

[node name="HSeparator" type="HSeparator" parent="ContentPanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Panel2" type="Panel" parent="ContentPanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="ContentPanelContainer/MarginContainer/VBoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ContentPanelContainer/MarginContainer/VBoxContainer/Panel2/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="VBoxContainer" type="HBoxContainer" parent="ContentPanelContainer/MarginContainer/VBoxContainer/Panel2/VBoxContainer2/MarginContainer"]
layout_mode = 2

[node name="Names" type="Label" parent="ContentPanelContainer/MarginContainer/VBoxContainer/Panel2/VBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
text = "Name"

[node name="UnlockedAt" type="Label" parent="ContentPanelContainer/MarginContainer/VBoxContainer/Panel2/VBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Unlocked at"

[node name="PaddingMid" type="Control" parent="ContentPanelContainer/MarginContainer/VBoxContainer/Panel2/VBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="Costs" type="Label" parent="ContentPanelContainer/MarginContainer/VBoxContainer/Panel2/VBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cost"
horizontal_alignment = 2

[node name="ScrollContainer" type="ScrollContainer" parent="ContentPanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
horizontal_scroll_mode = 0

[node name="shop" type="VBoxContainer" parent="ContentPanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[editable path="ContentPanelContainer/MarginContainer/VBoxContainer/Panel/RefillAmmonition"]
